# cavan

./: .gitconfig  .gitignore  Android.mk  AndroidNdk.mk  CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.in  SensorHal.mk  bashrc  config.h.in  configure  configure.ac
android/: .gitignore
android/AdbSmsTranslator/: .project  AndroidManifest.xml
android/BluetoothPrinter/: .classpath  AndroidManifest.xml
android/Calculator/: AndroidManifest.xml
android/Calculator2/: AndroidManifest.xml
android/EavooTouchScreen/: .project  AndroidManifest.xml
android/app/: .gitignore  build.gradle  settings.gradle
android/command/: Android.mk  Makefile  MediaPlayer.cpp  Su.cpp  aplayer.cpp  mkfs.c  mplayer.cpp  sensor_poll.c  sensor_poll.cpp  su_main.cpp  vplayer.cpp
android/include/: android.h
android/lib/: Android.cpp  ISuService.cpp  MediaPlayer.cpp  SuService.cpp  android-ndk.c  android.c  filesystem.c  sensors.c
android/script/: apk-move.sh  apk-preload.sh  init.rc
android/studio/: .gitignore
app/: .gitignore  Android.mk  Calculator.cpp  Makefile  Makefile.am  Makefile.in  abspath.c  alarm.c  alc5671_clock.c  ascii.c  auto_dd.c  auto_input.c  auto_mount.c  battery.c  battery_level.c  bdata.c  bkernel.c  bmp_view.c  bootimg.c  bramdisk.c  brecovery.c  bsystem.c  buboot.c  calculator.c  calculator2.cpp  cavan.mk  chroot.c  chtty.c  clock.c  copy.c  cpp_calculator.cpp  cpp_http_service.cpp  dd.c  df.c  dic_generator.c  display.c  dos2unix.c  eavoo_sell_statistic.c  ecc.c  event_repeater.c  (+118 more)
app/core/: Makefile  cavan_main.c  together.c
app/others/: wav_player.c
c#/: .gitignore
c#/Calculator/: CFA090307A.csproj  ClassDiagram1.cd  Form1.Designer.cs  Form1.cs  Form1.resx  Form10.cs  Form10.designer.cs  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Form3.resx  Form4.Designer.cs  Form4.cs  Form5.Designer.cs  Form5.cs  Form5.resx  Form6.Designer.cs  Form6.cs  Form6.resx  Form7.cs  Form7.designer.cs  Form7.resx  Form8.cs  Form8.designer.cs  Form9.cs  Form9.designer.cs  Form9.resx  Program.cs  Resource1.Designer.cs
c#/FFMpeg/: FFMpeg.sln
c#/FFMpegConvert/: FFMpegConvert.sln
c#/JsonGenerator/: JsonGenerator.sln
c#/JwaooBdAddrServer/: JwaooBdAddrServer.sln
c#/JwaooOtpProgrammer/: JwaooOtpProgrammer.sln
c#/NetworkInputMethod/: NetworkInputMethod.sln
c#/RedPacketListener/: RedPacketListener.sln
config/: 01-network-manager-all.yaml  80_cavan_grub  arm_cavan_debug_config  arm_cavan_dynamically_config  arm_cavan_release_config  arm_cavan_static_config  arm_debug_config  arm_dynamically_config  arm_release_config  arm_static_config  host_cavan_debug_config  host_cavan_dynamically_config  host_cavan_release_config  host_cavan_static_config  host_debug_config  host_dynamically_config  host_release_config  host_static_config  sudoers
config/android/: init.cavan.rc
config/git/: git.conf  passwd
config/init/: tcp-dd
config/openwrt/: cavand
config/ssl/: cert.bks  cert.cer  cert.csr  cert.jks  cert.pem  key.pem
config/systemd/: cavan-http.service  git-daemon.service  role-change-client.service  role-change-mask.service  role-change.service  tcp-dd-unix.service  tcp-dd.service  tcp-proxy-adb.service  tcp-proxy.service  tcp-repeater.service  web-proxy.service
cpp/: .gitignore  BitMap.cpp  Context.cpp  Display.cpp  EpollClient.cpp  EpollService.cpp  Framebuffer.cpp  HttpClient.cpp  HttpFileManager.cpp  HttpService.cpp  Link.cpp  List.cpp  Lock.cpp  Makefile  Makefile.am  Makefile.in  Math.cpp  NetworkBase.cpp  NetworkClient.cpp  NetworkProtocol.cpp  NetworkService.cpp  NetworkUrl.cpp  Pool.cpp  Stack.cpp  TcpClient.cpp  TcpService.cpp  Thread.cpp  Udp.cpp  Window.cpp  cavan.mk
doc/: note_aes  note_android  note_automake  note_bash  note_c  note_command  note_compile  note_debug  note_dos  note_git  note_gradle  note_java  note_kernel  note_makefile  note_maxwit.doc  note_mfc  note_mysql  note_perl  note_sed  note_software  note_svn  note_vim  note_web
driver/: .gitignore  Kconfig  Makefile  swan_vk.c  swan_vn.c
driver/core/: Makefile  cavan_debugfs.c  cavan_firmware.c  cavan_i2c.c  cavan_input_core.c  cavan_io.c  cavan_sensor_core.c  cavan_sysfs.c  cavan_thread.c  cavan_ts_core.c  hua_i2c.c  (+7 more)
html/: signin.html
include/: Makefile.am  Makefile.in  cavan.h
java/: .gitignore
lib/: .gitignore  Android.mk  Makefile  Makefile.am  Makefile.in  adb.c  alarm.c  android.c  bcrypt.c  block.c  bmp.c  bootimg.c  cache.c  calculator.c  cavan.mk  cftp.c  codec.c  command.c  copy.c  crc.c  ctype.c  dd.c  debug.c  device.c  display.c  drm.c  ecc.c  environment.c  event.c  ext2.c  ext4.c  fb.c  file.c  font.c  ftp.c  gpio.c  gsensor.c  heart_rate.c  http.c  huamobile.c  (+76 more)
mfc/: .gitignore
script/: cavan-adb-install  cavan-adb-push  cavan-adb-remount  cavan-android-push  cavan-autogen  cavan-build-env  cavan-build-icu4c  cavan-build-ms600  cavan-config-gtk  cavan-config-sh  cavan-create-bin  cavan-format-code-c  cavan-git-color  cavan-git-daemon-run  cavan-git-svn  cavan-git-svn-repo  cavan-imx-init-script-converter  cavan-init  cavan-k2-clear.sh  cavan-k2-daemon.sh  cavan-k2-service.sh  cavan-kermit  cavan-kernel-install  cavan-kernel-module  cavan-kernel_build  cavan-make  cavan-package  cavan-poll-thermal  cavan-repo  cavan-repo-command  cavan-repo-creator  cavan-repo-manager  cavan-sprd-compile  cavan-statistics  cavan-svn-patch  cavan-svn-repo  cavan-tc3587xx-converter  cavan-tc3587xx-coverter  cavan-upper-ln  git-repo  (+1 more)
test/: cavan.mk  testCache.c  testCommand.c  testDebug.c  testExt4.c  testFifo.c  testFile.c  testFont.c  testFramebuffer.cpp  testJwp.c  testLock.cpp  testMath.cpp  testMux.c  testNetwork.c  testPool.cpp  testProgressBar.c  testQueue.c  testService.c  testStack.cpp  testText.c  testThread.cpp  testUevent.c  testXml.c  test_bcrypt.c  test_cache.c  test_command.c  test_discovery.c  test_epoll.c  test_file.c  test_huffman.c  test_json.c  test_jwp.c  test_lock.cpp  test_lz77.c  test_math.cpp  test_network.c  test_printf.c  test_progress_bar.c  test_regex.c  test_reliable_udp.c  (+4 more)
toolchian/: .gitignore  Makefile
xcode/: .gitignore
(+1962 files in other folders)
